
  Pre-release 0.7

  o FEATURE: PDBe Recent structure browser.
 
  o BUG-FIX: Fix missing C7 on DA -> DT mutation [Sabine Schneider].

  o BUG-FIX: TER records on base mutation [James Parker].

  o BUG-FIX: DNA in sequence view [Miguel Ortiz Lombardia].
 
  o BUG-FIX: Update Go To Atom dialog after water merging [Bob Nolte].

------

  Release 0.6.2

  o FEATURE: PISA Interfaces can now be represented in Coot (requires
    pisa version 1.06 or later).

  o FEATURE: Regularize sphere function introduced.

  o FEATURE: --update-self to update pre-release binary from server.

  o FEATURE: SBase molecules can be imported (under Search Monomer
    Library).

  o FEATURE: prodrg-ify ligand function added (generates restraints
    for the specified residue).

  o FEATURE: higly-coordinated waters metal substitution search added.

  o FEATURE: Rudimentary support for reading 3D MDL mol2 files.

  o FEATURE: New map representation styles, solid/transparent and
    "cut-glass".

  o CHANGE: Align & Mutate now provides a simple dialog with the
    alignment.

  o CHANGE: Environment distances are separated into bumps and bonds
    [Bob Nolte].

  o CHANGE: Move molecule here only moves small molecules by default
    now.  There is an check button to allow big molecules [Kevin
    Madauss].

  o CHANGE: In MTZ reading Expert Mode, if the low resolution limit is
    not set, then presume that it was 999.9A [Randy Read].

  o CHANGE: Faster, multiprocessor electrostatic surfaces [Martin
    Noble].

  o CHANGE: pointer distances are updated on go-to-blob [JED].

  o CHANGE: COOT_SCHEME_EXTRA_DIR and COOT_PYTHON_EXTRAS_DIR are now
    ":"-separated lists [Thomas Womack].

  o CHANGE: Real-space refinement is now interruptible [JED].

  o CHANGE: NCS skipping now works in the reverse chain order too
    (Shift-O) [JED].

  o CHANGE: Residues are checked atom by atom against the dictionary
    and refinement is not started if there is not complete agreement