@@ -1075,6 +1075,9 @@ Punted from 0.6:
     Consider iron-sulfur clusters.  Punted ::: 3  
 
 
+  o pointer distances should give distances to symmetry molecules too
+  - punted. ::: 2
+
 
 ------
 
